src/objects/External_File__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <description>The name of the file.</description>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mime_Type__c</fullName>
        <description>The MIME type of the file in question.</description>
        <label>Mime Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Cloudinary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <globalPicklist>Filelink_Tags</globalPicklist>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
    </fields>
    <label>External File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>External_ID__c</columns>
        <columns>Public_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>